--- a/src/pages/Mypage/mypage.scss
+++ b/src/pages/Mypage/mypage.scss
@@ -14,11 +14,11 @@
       color: $pink;
     }
 
-    .myTasteBtn {
+    a {
       margin: 20px 20px;
       font-size: 22px;
       font-weight: bold;
-      text-decoration: none;
+      color: black;
       cursor: pointer;
     }
   }
