--- a/src/pages/MovieDetail/MovieContent/CommentBox/CommentBox.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentBox/CommentBox.scss
@@ -4,7 +4,7 @@
   display: block;
   height: 290px;
   background-color: #eee;
-
+  padding: 20px;
   border-radius: 5px;
 
   .commentTitle {
@@ -56,11 +56,12 @@
   .commentIcons {
     display: flex;
     color: $grey;
-    margin: 5px 0 5px 0;
+    margin: 5px 0 5px 10px;
+    display: inline-block;
 
     .thumbsUpWrapper,
     .commentWrapper {
-      margin: 10px;
+      margin: 20px;
 
       .thumsUpIcon,
       .commentIcon {
