--- a/src/pages/MovieDetail/MovieContent/CommentBox/CommnetDetail/CommentDetailBox/CommentDetailBox.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentBox/CommnetDetail/CommentDetailBox/CommentDetailBox.scss
@@ -1,1 +1,17 @@
 @import '../../../../../../styles/common.scss';
+
+@keyframes {
+  0% {
+  }
+  50% {
+  }
+  100% {
+  }
+}
+
+input {
+  width: 97%;
+  margin-left: 10px;
+  height: 20px;
+  border-radius: 5px;
+}
