--- a/src/pages/MovieDetail/MovieSide/GalleryBox/galleryBox.scss
+++ b/src/pages/MovieDetail/MovieSide/GalleryBox/galleryBox.scss
@@ -1,19 +1,18 @@
 @import '../../../../styles/common.scss';
 
-.GalleryBoxWrapper {
-  // @include flex-center;
-  // display: flex;
-  .GalleryWrapper {
-    .slick-list {
-      // width: 300px;
-      height: 111px;
-    }
-  }
+.GalleryBox {
+  display: flex;
+  overflow: hidden;
+  overflow-x: scroll;
 
-  // background-color: red;
-  img {
-    display: flex;
-    width: 132px;
-    height: 110px;
+  .galleryPictureWrapper {
+    padding: 10px;
+    .galleryPicture {
+      width: 138px;
+      height: 89px;
+      padding: 10px 0px;
+      border: 1px solid #bebebe;
+      border-radius: 5px;
+    }
   }
 }
