--- a/src/pages/Main/ThemeBox/MovieBox/movieBox.scss
+++ b/src/pages/Main/ThemeBox/MovieBox/movieBox.scss
@@ -29,6 +29,7 @@
         bottom: 6px;
         right: 183.797px;
         left: 6px;
+        color: #fff;
       }
 
       .movieInfo {
@@ -40,7 +41,7 @@
           font-weight: 500;
           font-size: 16px;
           height: 22px;
-          margin-bottom: 3px;
+          margin: 10px 0 5px 0;
           outline: none;
         }
         .movieDate {
