--- a/src/pages/Main/ThemeBox/themeBox.scss
+++ b/src/pages/Main/ThemeBox/themeBox.scss
@@ -1,8 +1,10 @@
+@import '../../../styles/common.scss';
+
 .onesPick {
   display: flex;
   height: 35em;
   width: 90em;
-  margin: auto;
+  margin-top: 30px;
   // margin-bottom: 30px;
   // border: solid Red;
 
@@ -25,9 +27,14 @@
           font-weight: 700;
           letter-spacing: -0.4;
           margin-left: 8px;
+          color: $pink;
           // border: dashed 1px black;
+          span {
+            color: #000;
+          }
         }
       }
+
       .boxRankingCover {
         height: 30.517em;
         width: 84.438em;
