--- a/src/components/Nav/Search/search.scss
+++ b/src/components/Nav/Search/search.scss
@@ -14,7 +14,8 @@
     width: 300px;
     padding: 10px;
     border: 1px solid rgb(235, 235, 235);
-    z-index: 100000;
+    z-index: 50;
+    //50정도
     background-color: white;
     .searchList {
       border-bottom: 1px solid rgb(235, 235, 235);
