--- a/src/pages/MovieDetail/MovieContent/CommentBox/AddComment/AddComment.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentBox/AddComment/AddComment.scss
@@ -2,12 +2,18 @@
 
 .commentAdd {
   .newComment {
-    background-color: #fff;
+    display: flex;
+    align-items: center;
+    background-color: #bbb;
     font-size: 13px;
-    margin: 10px;
-    width: 97%;
+    margin: 10px 0 0 0;
+    padding-left: 10px;
     border-radius: 5px;
     border: 1px solid #ddd;
-    height: 20px;
+    height: 30px;
+
+    &:hover {
+      background-color: #fff;
+    }
   }
 }
