--- a/src/pages/MovieDetail/MovieContent/CommentBox/CommnetDetail/CommentDetailBox/CommentDetailBox.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentBox/CommnetDetail/CommentDetailBox/CommentDetailBox.scss
@@ -2,7 +2,10 @@
 
 input {
   width: 97%;
-  margin-left: 10px;
+  margin: 10px 0 10px 10px;
   height: 20px;
   border-radius: 5px;
+}
+
+.like {
 }
