--- a/src/pages/MovieDetail/MovieContent/CommentWrite/CommentWrite.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentWrite/CommentWrite.scss
@@ -15,6 +15,7 @@
     width: 640px;
     height: 540px;
     background-color: #fff;
+    z-index: 10000;
 
     .commentHeading {
       display: flex;
