--- a/src/pages/MovieDetail/MovieHeader/WantToSee/wantToSee.scss
+++ b/src/pages/MovieDetail/MovieHeader/WantToSee/wantToSee.scss
@@ -15,6 +15,7 @@
     border-radius: 5px;
     background-color: #fff;
     padding: 15px;
+    z-index: 10000;
 
     .seeTitle {
       display: flex;
