[Refactor] 멘토님 수정 요청 사항 반영

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -107,3 +107,8 @@ input {
   flex-direction: column;
   align-items: center;
 }
+
+.slick-prev:before,
+.slick-next:before {
+  color: #ddd !important;
+}
