--- a/src/components/Nav/Signup/signup.scss
+++ b/src/components/Nav/Signup/signup.scss
@@ -41,6 +41,10 @@
         height: 70px;
       }
 
+      .lostPw {
+        color: $pink;
+      }
+
       .signupText {
         color: black;
         font-size: 17px;
@@ -48,15 +52,25 @@
         margin: 24px 0;
       }
 
+      .switchSignup {
+        color: $pink;
+        cursor: pointer;
+      }
+
+      .switchLogin {
+        color: $pink;
+        cursor: pointer;
+      }
+
       form {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 240px;
+        height: 200px;
 
         input {
           background-color: $lightgrey;
-          margin-bottom: 10px;
+          margin: 0 1px 10px 0;
           width: 100%;
           height: 44px;
           padding: 0 12px;
@@ -71,17 +85,18 @@
           background-color: $pink;
           color: white;
           border-radius: 7px;
+          margin-top: 30px;
         }
         .displayNone {
           display: none;
         }
       }
 
+      .lostPw {
+        margin-bottom: 15px;
+      }
+
       .loginText {
-        span {
-          color: $pink;
-          cursor: pointer;
-        }
         margin-top: 20px;
       }
       .or {
@@ -109,14 +124,67 @@
           border-top: 1px solid #bdbcbc;
         }
       }
-      button {
+      .kakaoBtn {
         width: 100%;
         height: 44px;
         margin: 7px 0;
         padding: 0;
         font-size: 16px;
         border-radius: 7px;
+        background-color: #fae100;
         cursor: pointer;
+
+        .forBalanceKakao {
+          height: 44px;
+          margin-right: 120px;
+
+          .kakaoLogo {
+            height: 40px;
+            width: 40px;
+            margin-right: 20px;
+          }
+
+          .kakaoText {
+            margin-top: 15px;
+            position: absolute;
+            font-size: 16px;
+            font-weight: 700;
+          }
+        }
+      }
+
+      .googleBtn {
+        width: 100%;
+        height: 44px;
+        margin: 7px 0;
+        padding: 0;
+        font-size: 16px;
+        border-radius: 7px;
+        background-color: #558af6;
+        border-radius: 5px;
+        border: 1px solid #cbccd0;
+        border-radius: 5px;
+        cursor: pointer;
+
+        .forBalanceGoogle {
+          height: 44px;
+          margin-right: 120px;
+
+          .googleLogo {
+            margin: 2px 20px 0 0;
+            height: 38px;
+            width: 38px;
+          }
+
+          .googleText {
+            margin-top: 15px;
+            position: absolute;
+            font-size: 16px;
+            font-weight: 700;
+            color: white;
+            font-weight: 700;
+          }
+        }
       }
     }
   }
