--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -56,8 +56,8 @@ $lightyellow: #ffdd64;
 /* movie img size */
 
 @mixin bigSize {
-  width: 15.574em;
-  height: 22.696em;
+  width: 210px;
+  height: 310px;
   border: 1px solid #74747b;
   border-radius: 5px;
 }
