--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -1,5 +1,159 @@
 @import '../../styles/common.scss';
 
-.rankIcon {
-  @include rankIcon; 
+.Main {
+  .header {
+    @include flex-spaceBetween-center;
+    height: 50px;
+    border-bottom: 1px solid #eeeeee;
+
+    .headerArrow {
+      margin: 15px 20px 5px 20px;
+      font-size: 20px;
+      font-weight: normal;
+      color: $pink;
+    }
+
+    a {
+      margin: 20px 20px;
+      font-size: 22px;
+      font-weight: bold;
+      color: black;
+      cursor: pointer;
+    }
+  }
+  section {
+    margin: 30px 20px;
+    border-bottom: 1px solid #ececec;
+
+    .sectionHeader {
+      @include flex-spaceBetween-center;
+      height: 48px;
+
+      span {
+        margin-left: 15px;
+        font-size: 24px;
+        font-weight: 900;
+        font-family: roboto;
+      }
+
+      .sectionCount {
+        margin-left: 5px;
+        font-size: 16px;
+        font-weight: 400;
+        color: #999898;
+      }
+
+      .headerRight {
+        color: $pink;
+        margin-right: 15px;
+      }
+    }
+    .movieList {
+      display: flex;
+      height: 400px;
+      padding: 10px 15px;
+      margin-bottom: 20px;
+      overflow-x: scroll;
+
+      .movieBox {
+        margin: 5px;
+
+        .posterWrapper {
+          @include bigSize;
+          img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .movieTitle {
+          width: 141px;
+          height: 16px;
+          margin-top: 5px;
+          color: #292a32;
+          font-size: 15px;
+          font-weight: 800;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        }
+
+        .movieScore {
+          margin-top: 7px;
+          color: $yellow;
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+
+.MovieBox {
+  width: 16.699em;
+
+  .movieAllWrap {
+    display: flex;
+    height: 28.634em;
+    width: 16.699em;
+    padding: 0 6px 0 6px;
+
+    .moviePosterInside {
+      height: 28.5em;
+      width: 15.675em;
+      position: relative;
+      cursor: pointer;
+
+      .moviePosterWrap {
+        .moviePoster {
+          @include bigSize;
+          object-fit: cover;
+          display: grid;
+        }
+      }
+      .movieRank {
+        @include rankIcon;
+        position: absolute;
+        top: 6px;
+        bottom: 6px;
+        right: 183.797px;
+        left: 6px;
+        color: #fff;
+      }
+
+      .movieInfo {
+        height: 5.438em;
+        width: 13.05em;
+        margin: 5px 10px 0 0;
+
+        .movieTitle {
+          font-weight: 500;
+          font-size: 16px;
+          height: 22px;
+          margin: 10px 0 5px 0;
+          outline: none;
+        }
+        .movieDate {
+          outline: none;
+          padding-bottom: 1px;
+          height: 22px;
+          padding: 0 0 1px 0;
+        }
+        .movieRate {
+          display: flex;
+          color: #555765;
+          margin-top: 2px;
+          height: 12px;
+          .iconStar {
+            font-size: 12px;
+          }
+        }
+        .movieRatio {
+          color: #74747b;
+          font-size: 13px;
+          letter-spacing: -0.3px;
+          margin: 5px 0 0 0;
+        }
+      }
+    }
+  }
 }
