[Fix] 서버 통신 기능구현 중

--- a/src/pages/Mypage/Mytaste/ImgInput/imgInput.scss
+++ b/src/pages/Mypage/Mytaste/ImgInput/imgInput.scss
@@ -7,9 +7,9 @@
     right: 20px;
     opacity: 0.8;
     cursor: pointer;
-    &:hover {
-      opacity: 1;
-    }
+    // &:hover {
+    //   opacity: 1;
+    // }
   }
   input {
     display: none;
