--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -36,6 +36,10 @@
         font-family: roboto;
       }
 
+      .pinkText {
+        color: $pink;
+      }
+
       .sectionCount {
         margin-left: 5px;
         font-size: 16px;
