--- a/src/pages/Main/ThemeBox/MovieBox/movieBox.scss
+++ b/src/pages/Main/ThemeBox/MovieBox/movieBox.scss
@@ -44,19 +44,30 @@
           margin: 10px 0 5px 0;
           outline: none;
         }
+
         .movieDate {
           outline: none;
           padding-bottom: 1px;
           height: 22px;
           padding: 0 0 1px 0;
+          color: $grey;
         }
+
         .movieRate {
           display: flex;
           color: #555765;
           margin-top: 2px;
           height: 12px;
+
           .iconStar {
             font-size: 12px;
+            color: $yellow;
+            margin: 0 3px;
+          }
+
+          .movieScore {
+            color: $yellow;
+            font-size: 13px;
           }
         }
         .movieRatio {
