[Fix] 마이테이스트 이미지 사이즈 오류 수정

--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -55,11 +55,13 @@
     }
     .movieList {
       display: flex;
+      width: 100%;
       height: 400px;
       padding: 10px 15px;
       margin-bottom: 20px;
       overflow-x: scroll;
       overflow-y: hidden;
+
 
       .movieBox {
         margin: 5px;
