--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -55,6 +55,7 @@
     }
     .movieList {
       display: flex;
+      justify-content: center;
       width: 100%;
       height: 400px;
       padding: 10px 15px;
@@ -62,12 +63,16 @@
       overflow-x: scroll;
       overflow-y: hidden;
 
+      .slick-list {
+        width: 90vw;
+        height: 70vh;
+      }
 
       .movieBox {
         margin: 5px;
 
         .posterWrapper {
-          @include bigSize;
+          @include mainSize;
           img {
             object-fit: cover;
             width: 100%;
