--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -55,6 +55,13 @@ $lightyellow: #ffdd64;
 
 /* movie img size */
 
+@mixin mainSize {
+  max-width: 12.5rem;
+  max-height: 18.75rem;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+}
+
 @mixin bigSize {
   width: 200px;
   height: 300px;
