--- a/src/pages/MovieDetail/MovieContent/CommentBox/CommentBox.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentBox/CommentBox.scss
@@ -16,12 +16,12 @@
       display: flex;
       align-items: center;
 
-      img {
+      .commentorImage {
         @include smallProfile;
         margin: 10px;
       }
 
-      .writerId {
+      .commentorId {
         margin: 0 auto;
       }
     }
@@ -34,15 +34,13 @@
       border-radius: 20px;
       @include flex-center;
 
-      .writerStar {
+      .commentorStar {
         margin-right: 5px;
       }
     }
   }
 
   .commentContent {
-    // width: 270px;
-    // height: 170px;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 
