--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -22,6 +22,7 @@
     }
   }
   section {
+    width: 1320px;
     margin: 30px 20px;
     border-bottom: 1px solid #ececec;
 
@@ -36,7 +37,6 @@
         font-family: roboto;
       }
 
-      
       .pinkText {
         color: $pink;
         margin: 0;
@@ -56,7 +56,6 @@
     }
     .movieList {
       display: flex;
-      justify-content: center;
       width: 100%;
       height: 400px;
       padding: 10px 15px;
