--- a/src/pages/MovieDetail/MovieContent/CommentUpdate/CommentUpdate.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentUpdate/CommentUpdate.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/common.scss';
 
-.CommentWrite {
+.CommentUpdate {
   @include flex-center;
   position: fixed;
   top: 0;
@@ -41,7 +41,7 @@
 
     .commentContent {
       border-top: 1px solid #eee;
-      .writeComment {
+      .updateComment {
         width: 80%;
         height: 100%;
         padding: 30px 0px 0 20px;
