--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -1,4 +1,4 @@
-@import '../../styles/common.scss';
+@import 'styles/common.scss';
 @import '~font-awesome/scss/font-awesome';
 $fa-font-path: '~font-awesome/fonts';
 
