--- a/src/pages/Mypage/Mytaste/BelovedPeople/belovedPeople.scss
+++ b/src/pages/Mypage/Mytaste/BelovedPeople/belovedPeople.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/common.scss';
+@import 'styles/common.scss';
 
 .castingContentList {
   display: flex;
@@ -28,4 +28,3 @@
     }
   }
 }
-
