--- a/src/components/Nav/Search/search.scss
+++ b/src/components/Nav/Search/search.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/common.scss';
+@import 'styles/common.scss';
 .Search {
   .searchInput {
     background-color: $lightgrey;
