--- a/src/pages/MovieDetail/MovieContent/CastingList/castingList.scss
+++ b/src/pages/MovieDetail/MovieContent/CastingList/castingList.scss
@@ -1,9 +1,10 @@
 @import 'styles/common.scss';
+@import 'styles/theme.scss';
 
 .castingContentList {
   display: flex;
   margin: 10px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid $lightgrey;
 
   .castingImage {
     @include mediumProfile;
@@ -31,5 +32,5 @@
 
 .slick-prev:before,
 .slick-next:before {
-  color: #ddd !important;
+  color: $grey !important;
 }
