--- a/src/components/Nav/Signup/signup.scss
+++ b/src/components/Nav/Signup/signup.scss
@@ -1,4 +1,5 @@
 @import 'styles/common.scss';
+@import 'styles/theme.scss';
 
 .Signup {
   @include flex-center;
@@ -7,7 +8,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #00000080;
+  background: $black;
   z-index: 10000;
 
   .modalContainer {
@@ -46,7 +47,7 @@
       }
 
       .signupText {
-        color: black;
+        color: $black;
         font-size: 17px;
         font-weight: 900;
         margin: 24px 0;
@@ -83,7 +84,7 @@
           font-weight: 500;
           height: 44px;
           background-color: $pink;
-          color: white;
+          color: $white;
           border-radius: 7px;
           margin-top: 30px;
         }
@@ -109,8 +110,8 @@
           display: inline-block;
           position: relative;
           padding: 0px 14px;
-          color: #bdbcbc;
-          background-color: white;
+          color: $lightgrey;
+          background-color: $white;
           vertical-align: middle;
           font-size: 14px;
           font-weight: 400;
@@ -121,7 +122,7 @@
           top: 50%;
           left: 0px;
           width: 100%;
-          border-top: 1px solid #bdbcbc;
+          border-top: 1px solid $lightgrey;
         }
       }
       .kakaoBtn {
@@ -131,7 +132,7 @@
         padding: 0;
         font-size: 16px;
         border-radius: 7px;
-        background-color: #fae100;
+        background-color: $yellow;
         cursor: pointer;
 
         .forBalanceKakao {
@@ -160,9 +161,9 @@
         padding: 0;
         font-size: 16px;
         border-radius: 7px;
-        background-color: #558af6;
+        background-color: $blue;
         border-radius: 5px;
-        border: 1px solid #cbccd0;
+        border: 1px solid $lightgrey;
         border-radius: 5px;
         cursor: pointer;
 
@@ -181,7 +182,7 @@
             position: absolute;
             font-size: 16px;
             font-weight: 700;
-            color: white;
+            color: $white;
             font-weight: 700;
           }
         }
