--- a/src/pages/MovieDetail/MovieContent/movieContent.scss
+++ b/src/pages/MovieDetail/MovieContent/movieContent.scss
@@ -1,11 +1,12 @@
 @import 'styles/common.scss';
+@import 'styles/theme.scss';
 
 .MovieContentWrapper {
   .hiddenComment {
     align-items: center;
-    border: 1px solid #ddd;
+    border: 1px solid $lightgrey;
     margin-bottom: 20px;
-    background-color: #fff;
+    background-color: $white;
     height: 74px;
     padding: 20px;
 
@@ -16,9 +17,9 @@
     button {
       width: 224px;
       height: 40px;
-      border: 1px solid #ddd;
+      border: 1px solid $lightgrey;
       border-radius: 5px;
-      background-color: #fff;
+      background-color: $white;
       font-weight: normal;
       margin: 0 10px;
       cursor: pointer;
@@ -48,10 +49,10 @@
     }
 
     .movieContentBox {
-      background-color: #fff;
+      background-color: $white;
       padding: 20px;
       border-radius: 5px;
-      border: 1px solid #ddd;
+      border: 1px solid $lightgrey;
 
       .predictStar {
         .predictHeading {
@@ -65,7 +66,7 @@
           justify-content: space-between;
           align-items: center;
           font-size: 15px;
-          border-bottom: 1px solid #eee;
+          border-bottom: 1px solid $lightgrey;
 
           p {
             padding-left: 10px;
@@ -106,7 +107,7 @@
         .infoContent {
           font-size: 15px;
           padding: 10px;
-          border-bottom: 1px solid #ddd;
+          border-bottom: 1px solid $lightgrey;
 
           .contentHeading {
             margin: 10px 0;
