--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -48,7 +48,7 @@ $fa-font-path: '~font-awesome/fonts';
         width: 300px;
         height: 38px;
         .searchIcon {
-          color: $lightgrey;
+          color: $grey;
           width: 10px;
           height: 10px;
           margin: 0 10px;
